[package]
name = "todo-poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
guid-create = { version = "0.3.1", features = ["serde"] }
poem = "3.0.0"
poem-grants = "3.0.0"
poem-openapi = { version = "5.0.0", features = ["openapi-explorer", "uuid", "rapidoc"] }
serde = { version = "1.0.199", features = ["serde_derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }


[dependencies.uuid]
version = "1.7.0"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
